--- a/CacxClient/Windows/CreateAccPart2Window.xaml
+++ b/CacxClient/Windows/CreateAccPart2Window.xaml
@@ -8,12 +8,15 @@
         mc:Ignorable="d"
         Title="CreateAccPart2Window" Height="450" Width="800" Style="{StaticResource SmallWindowStyle}">
     <Grid>
-        <Ellipse Width="70" Height="70" Margin="0, 0, 150, 200"/>
-        <cc:TextBoxTextBlock Width="140" Height="35" Label="Username" Margin="80, 0, 0, 170"/>
+        <Ellipse Width="70" Height="70" Margin="0, 0, 150, 250"/>
+        <cc:TextBoxTextBlock Width="140" Height="35" Label="Username" Margin="80, 0, 0, 220"/>
         
-        <cc:TextBoxTextBlock Width="220" Height="35" Margin="10, 0, 0, 40" Label="First Name"/>
-        <cc:TextBoxTextBlock Width="220" Height="35"  Margin="10, 85, 0, 0" Label="Last Name"/>
+        <cc:TextBoxTextBlock Width="220" Height="35" Margin="10, 0, 0, 85" Label="First Name"/>
+        <cc:TextBoxTextBlock Width="220" Height="35"  Margin="10, 35, 0, 0" Label="Last Name"/>
 
-        <cc:TextBoxTextBlock Width="220" Height="35" Margin="0, 250, 0, 0" Label="Biography"/>
+        <cc:TextBoxTextBlock Width="220" Height="70" MaxTextLength="60" 
+            LabelYPosition="-20" Margin="10, 195, 0, 0" Label="Biography"/>
+
+        <Button Height="35" Width="70" Content="Sign up" VerticalAlignment="Bottom" Margin="10, 0, 0, 20"/>
     </Grid>
 </local:BaseWindow>
