--- a/CacxClient/Windows/CreateAccPart2Window.xaml
+++ b/CacxClient/Windows/CreateAccPart2Window.xaml
@@ -8,15 +8,15 @@
         mc:Ignorable="d"
         Title="CreateAccPart2Window" Height="450" Width="800" Style="{StaticResource SmallWindowStyle}">
     <Grid>
-        <Ellipse Width="70" Height="70" Margin="0, 0, 150, 250"/>
-        <cc:TextBoxTextBlock Width="140" Height="35" Label="Username" Margin="80, 0, 0, 220"/>
+        <Ellipse x:Name="ProfilePictureEllipse" Width="70" Height="70" Margin="0, 0, 150, 250"/>
+        <cc:TextBoxTextBlock x:Name="UsernameBox" Width="140" Height="35" Label="Username" Margin="80, 0, 0, 220"/>
         
-        <cc:TextBoxTextBlock Width="220" Height="35" Margin="10, 0, 0, 85" Label="First Name"/>
-        <cc:TextBoxTextBlock Width="220" Height="35"  Margin="10, 35, 0, 0" Label="Last Name"/>
+        <cc:TextBoxTextBlock x:Name="FirstNameBox" Width="220" Height="35" Margin="10, 0, 0, 95" Label="First Name"/>
+        <cc:TextBoxTextBlock x:Name="LastNameBox" Width="220" Height="35"  Margin="10, 25, 0, 0" Label="Last Name"/>
 
-        <cc:TextBoxTextBlock Width="220" Height="70" MaxTextLength="60" 
-            LabelYPosition="-20" Margin="10, 195, 0, 0" Label="Biography"/>
+        <cc:TextBoxTextBlock x:Name="BiographyBox" Width="220" Height="70" MaxTextLength="60" 
+            LabelYPosition="-20" Margin="10, 185, 0, 0" Label="Biography" TextWrapping="Wrap" AcceptsReturn="True"/>
 
-        <Button Height="35" Width="70" Content="Sign up" VerticalAlignment="Bottom" Margin="10, 0, 0, 20"/>
+        <Button Height="35" Width="70" Content="Sign up" VerticalAlignment="Bottom" Margin="0, 0, 0, 30"/>
     </Grid>
 </local:BaseWindow>
