--- a/CacxClient/Styles/EllipseStylesxaml.xaml
+++ b/CacxClient/Styles/EllipseStylesxaml.xaml
@@ -5,5 +5,16 @@
         <Setter Property="Stroke" Value="#1a191a"/>
         <Setter Property="StrokeThickness" Value="2"/>
         <Setter Property="Fill" Value="#2e2d2e"/>
+
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Trigger.EnterActions>
+                    <BeginStoryboard Storyboard="{StaticResource HoverGlowAnimationEllipse}"/>
+                </Trigger.EnterActions>
+                <Trigger.ExitActions>
+                    <BeginStoryboard Storyboard="{StaticResource UnHoverGlowAnimationEllipse}"/>
+                </Trigger.ExitActions>
+            </Trigger>
+        </Style.Triggers>
     </Style>
 </ResourceDictionary>
