--- a/CacxClient/Windows/CreateAccWindow.xaml
+++ b/CacxClient/Windows/CreateAccWindow.xaml
@@ -10,7 +10,7 @@
     <Grid>
         <TextBlock Foreground="{StaticResource DefaultErrorBrush}" Visibility="Hidden"
                    TextAlignment="Center" VerticalAlignment="Top" HorizontalAlignment="Center"
-                   Margin="0, 100, 0, 0" Name="ErrorTextBlock" Text="This is a test!"/>
+                   Margin="0, 100, 0, 0" Name="InfoTextBlock" Text="This is a test!"/>
 
         <cc:TextBoxTextBlock x:Name="EmailTextBox" Label="Email:" Width="200" Height="35" Margin="0, 0, 0, 100"/>
         <cc:TextBoxTextBlock x:Name="PasswordTextBox" Label="Password:" Width="200" Height="35" Margin="0, 50, 0, 0"/>
