--- a/CacxClient/Windows/LoginWindow.xaml
+++ b/CacxClient/Windows/LoginWindow.xaml
@@ -9,8 +9,12 @@
                   Title="Login"
                   Style="{StaticResource SmallWindowStyle}">
     <Grid>
-        <cc:TextBoxTextBlock Label="Email:" Width="200" Height="35" Margin="0, 0, 0, 100"/>
-        <cc:TextBoxTextBlock Label="Password:" Width="200" Height="35" Margin="0, 50, 0, 0"/>
+        <TextBlock Foreground="{StaticResource DefaultErrorBrush}" Visibility="Hidden"
+           TextAlignment="Center" VerticalAlignment="Top" HorizontalAlignment="Center"
+           Margin="0, 100, 0, 0" Name="InfoTextBlock" Text="This is a test!"/>
+
+        <cc:TextBoxTextBlock x:Name="EmailTextBox" Label="Email:" Width="200" Height="35" Margin="0, 0, 0, 100"/>
+        <cc:TextBoxTextBlock x:Name="PasswordTextBox" Label="Password:" Width="200" Height="35" Margin="0, 50, 0, 0"/>
 
         <TextBlock FontSize="13" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0, 102, 0, 0">
             <Hyperlink x:Name="CreateAccHyperlink">
