--- a/CacxClient/Windows/CreateAccPart2Window.xaml
+++ b/CacxClient/Windows/CreateAccPart2Window.xaml
@@ -1,25 +1,24 @@
-﻿<local:BaseWindow x:Class="CacxClient.Windows.CreateAccPart2Window"
+﻿<UserControl x:Class="CacxClient.Windows.CreateAccPart2Window"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CacxClient.Windows"
         xmlns:cc="clr-namespace:CacxClient.CostumComponents"
-        mc:Ignorable="d"
-        Title="CreateAccPart2Window" Height="450" Width="800" Style="{StaticResource SmallWindowStyle}">
+        mc:Ignorable="d">
     <Grid>
         <Button x:Name="GoBackBtn" Background="Transparent" FontSize="27"
            Content="🡨" Width="35" Height="35" Margin="10, 10, 0, 0" 
            VerticalAlignment="Top" HorizontalAlignment="Left"
            Style="{StaticResource TransparentBtnStyle}"/>
-        
+
         <TextBlock Foreground="{StaticResource DefaultErrorBrush}" Visibility="Hidden"
            TextAlignment="Center" VerticalAlignment="Top" HorizontalAlignment="Center"
            Margin="0, 40, 0, 0" Name="InfoTextBlock" Text="This is a test!"/>
-        
+
         <Ellipse x:Name="ProfilePictureEllipse" Width="70" Height="70" Margin="0, 0, 150, 250"/>
         <cc:TextBoxTextBlock x:Name="UsernameBox" MaxTextLength="15" Width="140" Height="35" Label="Username" Margin="80, 0, 0, 220"/>
-        
+
         <cc:TextBoxTextBlock x:Name="FirstNameBox" Width="220" Height="35" Margin="10, 0, 0, 95" Label="First Name"/>
         <cc:TextBoxTextBlock x:Name="LastNameBox" Width="220" Height="35"  Margin="10, 25, 0, 0" Label="Last Name"/>
 
@@ -28,4 +27,4 @@
 
         <Button x:Name="SignUpBtn" Height="35" Width="70" Content="Sign up" VerticalAlignment="Bottom" Margin="0, 0, 0, 20"/>
     </Grid>
-</local:BaseWindow>
+</UserControl>
