--- a/CacxClient/Windows/LoginWindow.xaml
+++ b/CacxClient/Windows/LoginWindow.xaml
@@ -1,13 +1,11 @@
-﻿<local:BaseWindow x:Class="CacxClient.Windows.LoginWindow"
+﻿<UserControl x:Class="CacxClient.Windows.LoginWindow"
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                   xmlns:local="clr-namespace:CacxClient.Windows"
                   xmlns:cc="clr-namespace:CacxClient.CostumComponents"
-                  mc:Ignorable="d"
-                  Title="Login"
-                  Style="{StaticResource SmallWindowStyle}">
+                  mc:Ignorable="d">
     <Grid>
         <TextBlock Foreground="{StaticResource DefaultErrorBrush}" Visibility="Hidden"
            TextAlignment="Center" VerticalAlignment="Top" HorizontalAlignment="Center"
@@ -24,4 +22,4 @@
 
         <Button x:Name="LoginBtn" Content="Login" Width="75" Height="30" Margin="0, 210, 0, 0"/>
     </Grid>
-</local:BaseWindow>
+</UserControl>
