--- a/CacxClient/Windows/VerificationWindow.xaml
+++ b/CacxClient/Windows/VerificationWindow.xaml
@@ -1,12 +1,11 @@
-﻿<local:BaseWindow x:Class="CacxClient.Windows.VerificationWindow"
+﻿<UserControl x:Class="CacxClient.Windows.VerificationWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CacxClient.Windows"
         xmlns:cc="clr-namespace:CacxClient.CostumComponents"
-        mc:Ignorable="d"
-        Title="VerificationWindow" Height="450" Width="800" Style="{StaticResource ResourceKey=SmallWindowStyle}">
+        mc:Ignorable="d">
     <Grid>
         <TextBlock Foreground="{StaticResource DefaultErrorBrush}" Visibility="Hidden"
            TextAlignment="Center" VerticalAlignment="Top" HorizontalAlignment="Center"
@@ -23,4 +22,4 @@
 
         <Button x:Name="VerifyBtn" Content="Verify" Width="70" Height="35" Margin="0, 150, 0, 0"/>
     </Grid>
-</local:BaseWindow>
+</UserControl>
