--- a/CacxClient/Windows/MainWindow.xaml
+++ b/CacxClient/Windows/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CacxClient.Windows"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" Style="{StaticResource SmallWindowStyle}">
+        Title="MainWindow" WindowStartupLocation="CenterScreen" Height="450" Width="800" Style="{StaticResource SmallWindowStyle}">
     <Grid>
         
     </Grid>
